# GraSV

./: .gitignore  README.md  pyproject.toml
models/: grasv_encoder.pt  grasv_scorer.pt
src/grasv/: __init__.py  calling.py  cli.py  config.py  data.py  graph.py  pipeline.py  scorer.py  signature.py  signature_extraction.py  signature_features.py  utils.py
tests/: test_grasv.py
train/: train_encoder.py  train_scorer
